--- a/package.json
+++ b/package.json
@@ -35,36 +35,36 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^1.0.0-next.20",
-		"@sveltejs/kit": "^1.0.0-next.179",
+		"@sveltejs/kit": "^1.0.0-next.180",
 		"@types/jest": "^27.0.2",
-		"@typescript-eslint/eslint-plugin": "^4.32.0",
-		"@typescript-eslint/parser": "^4.32.0",
-		"eslint": "^7.32.0",
+		"@typescript-eslint/eslint-plugin": "^4.33.0",
+		"@typescript-eslint/parser": "^4.33.0",
+		"eslint": "7.32",
 		"eslint-plugin-svelte3": "^3.2.1",
-		"jest": "^27.2.4",
-		"lint-staged": "^11.2.0",
+		"jest": "^27.2.5",
+		"lint-staged": "^11.2.2",
 		"rollup": "^2.58.0",
 		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-typescript2": "^0.30.0",
 		"simple-git-hooks": "^2.6.1",
 		"standard-version": "^9.3.1",
 		"svelte": "^3.43.1",
-		"svelte-preprocess": "^4.9.7",
+		"svelte-preprocess": "^4.9.8",
 		"ts-jest": "^27.0.5",
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3",
 		"typescript-plugin-css-modules": "^3.4.0",
-		"vite": "^2.6.2"
+		"vite": "^2.6.5"
 	},
 	"type": "module",
 	"dependencies": {
-		"@ericrovell/radix": "^0.4.0"
+		"@ericrovell/radix": "^0.5.0"
 	},
 	"lint-staged": {
 		"*.{ts,js,svelte}": "eslint"
 	},
 	"simple-git-hooks": {
-    "pre-commit": "npx lint-staged",
-    "pre-push": "npm run lint"
-  }
+		"pre-commit": "npx lint-staged",
+		"pre-push": "npm run lint"
+	}
 }
