--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
 		"node": ">=14.0"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^1.0.0-next.20",
-		"@sveltejs/kit": "^1.0.0-next.180",
+		"@sveltejs/adapter-static": "^1.0.0-next.21",
+		"@sveltejs/kit": "^1.0.0-next.184",
 		"@types/jest": "^27.0.2",
-		"@typescript-eslint/eslint-plugin": "^4.33.0",
-		"@typescript-eslint/parser": "^4.33.0",
-		"eslint": "7.32",
+		"@typescript-eslint/eslint-plugin": "^5.0.0",
+		"@typescript-eslint/parser": "^5.0.0",
+		"eslint": "~8.0.1",
 		"eslint-plugin-svelte3": "^3.2.1",
 		"jest": "^27.2.5",
 		"lint-staged": "^11.2.2",
@@ -48,13 +48,13 @@
 		"rollup-plugin-typescript2": "^0.30.0",
 		"simple-git-hooks": "^2.6.1",
 		"standard-version": "^9.3.1",
-		"svelte": "^3.43.1",
+		"svelte": "^3.43.2",
 		"svelte-preprocess": "^4.9.8",
-		"ts-jest": "^27.0.5",
+		"ts-jest": "^27.0.7",
 		"tslib": "^2.3.1",
-		"typescript": "^4.4.3",
+		"typescript": "^4.4.4",
 		"typescript-plugin-css-modules": "^3.4.0",
-		"vite": "^2.6.5"
+		"vite": "^2.6.7"
 	},
 	"type": "module",
 	"dependencies": {
